--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,4 +10,5 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build the Docker image
+        if: ${{ success() }}
         run: docker build . --file Dockerfile --tag test-github-ci:$(date +%s)
